--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,7 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        App\Entity\User:
+        App\Entity\Usuario:
             algorithm: auto
 
 
@@ -12,7 +12,7 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Usuario
                 property: username
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
